<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/pause_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.exoplayer2.ui.PlayerView
        android:id="@+id/pause_norv_player"
        android:layout_width="294dp"
        android:layout_height="196dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pause_resume_deposition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resume_deposition_title"
        android:textSize="64sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/norv_pause_alert"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pause_resume_deposition" />

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:paddingTop="25dp"
        android:paddingBottom="25dp"
        android:text="@string/resume_deposition_title"
        android:textAllCaps="false"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.example.kloadingspin.KLoadingSpin
        android:id="@+id/norv_pause_resume_spin"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="true"
        android:visibility="invisible"
        app:backgroundColor="#AA008DFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:primarySpinnerColor="#555555"
        app:rotationSpeedInMs="3000"
        app:secondarySpinnerColor="#FF9800"
        app:text="Deposition Resuming..."
        app:textColor="#FFFFFF"
        app:textSize="80" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/pause_norv_player"
        app:layout_constraintStart_toEndOf="@id/pause_norv_player"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/norv_pause_totaltime"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/pause_total_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/norv_pause_unknown"
                android:textColor="#0F236E"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/norv_pause_breaks"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/pause_breaks_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/norv_pause_unknown"
                android:textColor="#0F236E"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>