<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <WebView
        android:id="@+id/confirm_camera"
        android:layout_width="294dp"
        android:layout_height="196dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/confirm_start_deposition"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:paddingTop="25dp"
            android:paddingBottom="25dp"
            android:text="@string/start_deposition_title"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/confirm_cancel_deposition"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:paddingTop="25dp"
            android:paddingBottom="25dp"
            android:text="@string/cancel_deposition_title"
            android:textAllCaps="false" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/confirm_dialog_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:drawable/dialog_holo_light_frame"
            android:orientation="vertical"
            android:padding="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent=".8">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirmation_dialog_title"
                android:textAlignment="center"
                android:textSize="36sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirmation_dialog_message"
                android:textAlignment="center"
                android:textSize="24sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <TextView
                android:id="@+id/confirm_dialog_accept"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#29C64D"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/confirmation_dialog_accept"
                android:textColor="#fff"
                android:textSize="24sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <TextView
                android:id="@+id/confirm_dialog_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FF4B4B"
                android:gravity="center"
                android:paddingVertical="10dp"
                android:text="@string/confirmation_dialog_cancel"
                android:textColor="#fff"
                android:textSize="24sp" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.example.kloadingspin.KLoadingSpin
        android:id="@+id/norv_confirm_start_spin"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="true"
        android:visibility="invisible"
        app:backgroundColor="#AA008DFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:primarySpinnerColor="#555555"
        app:rotationSpeedInMs="3000"
        app:secondarySpinnerColor="#FF9800"
        app:text="Deposition Starting..."
        app:textColor="#FFFFFF"
        app:textSize="80" />

    <com.example.kloadingspin.KLoadingSpin
        android:id="@+id/norv_confirm_cancel_spin"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="true"
        android:visibility="invisible"
        app:backgroundColor="#AA008DFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:primarySpinnerColor="#555555"
        app:rotationSpeedInMs="3000"
        app:secondarySpinnerColor="#FF9800"
        app:text="Deposition Cancelling..."
        app:textColor="#FFFFFF"
        app:textSize="80" />

</androidx.constraintlayout.widget.ConstraintLayout>