<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.exoplayer2.ui.PlayerView
        android:id="@+id/end_norv_player"
        android:layout_width="294dp"
        android:layout_height="196dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/end_conclude_deposition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/conclude_deposition_title"
        android:textSize="64sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/accept_conclude_deposition"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:background="#29C64D"
        android:gravity="center"
        android:text="@string/yes_title"
        android:textColor="#fff"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="@id/end_conclude_deposition"
        app:layout_constraintTop_toBottomOf="@id/end_conclude_deposition" />

    <TextView
        android:id="@+id/cancel_conclude_deposition"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:background="#FF4B4B"
        android:gravity="center"
        android:text="@string/no_title"
        android:textColor="#fff"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="@id/end_conclude_deposition"
        app:layout_constraintTop_toBottomOf="@id/end_conclude_deposition" />

    <com.example.kloadingspin.KLoadingSpin
        android:id="@+id/norv_end_stop_spin"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="true"
        android:visibility="invisible"
        app:backgroundColor="#AA008DFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:primarySpinnerColor="#555555"
        app:rotationSpeedInMs="3000"
        app:secondarySpinnerColor="#FF9800"
        app:text="Deposition Stopping..."
        app:textColor="#FFFFFF"
        app:textSize="80" />

</androidx.constraintlayout.widget.ConstraintLayout>